--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -665,6 +665,8 @@ URU;Uruguay;Uruguay;Uruguay;;;;;;;;;;;x
 USA;United States of America;États-Unis;USA;;;;;;;;;;;x
 USS;United States of South America;;;;;;;;;;;;;x
 UTI;Territory Exchange;;;;;;;;;;;;;x
+U01;Assimilation Campaign;;;;;;;;;;;;;x
+U02;Statehood Mechanic;;;;;;;;;;;;;x
 UUW;Ussuwi;;;;;;;;;;;;;x
 UVT;Vermont;;;;;;;;;;;;;x
 UYG;Uyghurstan;;;;;;;;;;;;;x
