--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1217,7 +1217,7 @@ EVTDESC97507;Russia has control over $CAPITAL$, and much of our nation is either
 EVTNAME97507;The War is Lost;;;;;;;;;;;;;x
 EVTOPTA97507;A dark day for the Ottoman Empire.;;;;;;;;;;;;;x
 EVTOPTB97507;Never! There is still a chance!;;;;;;;;;;;;;x
-EVTDESC97508;The $FROMCOUNTRY_ADJ$ government has approached us, begging for terms of surrender. It will mean relinquishing our current war goals and sitting down with them to work out the terms of a treaty once the war is done, but we are confident they will be to $COUNTRY$’s benefit. No doubt the other powers of Europe will be far less pleased, but that is not our concern. Such a treaty will prevent this war from continuing on interminably.;;;;;;;;;;;;;x
+EVTDESC97508;The $FROMCOUNTRY_ADJ$ government has approached us, begging for terms of surrender. What forces the Ottomans mustered against us have been beaten, and we control much of their Empire. What armies their Western allies sent have all been destroyed, and not a sight of a Western soldier can be seen within Ottoman Empire. They seem to have run out of steam, and cannot challenge us anymore on this issue. No doubt the powers of Europe will be displeased, but they as well as the Ottomans seem ready to sit down and negotiate a peace settlement. Such a treaty will prevent this war from continuing on interminably, and our goals of domination within Ottoman Empire will be achieved.;;;;;;;;;;;;;x
 EVTNAME97508;The $FROMCOUNTRY_ADJ$ Surrender;;;;;;;;;;;;;x
 EVTOPTA97508;We accept.;;;;;;;;;;;;;x
 EVTOPTB97508;We refuse. The war continues.;;;;;;;;;;;;;x
