--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1976,6 +1976,14 @@ EVTOPTA999951;He’ll have to be crushed.;;;;;;;;;;;;;x
 EVTDESC999952;The $COUNTRY_ADJ$ Expeditionary Force in Tonkin prepared for a major offensive at the end of the year to annihilate the Black Flags, however diplomatic efforts failed to persuade China to withdraw its support for Liu Yongfu and his Black Flags. \n \n The Chinese stood firm, and refused to withdraw substantial garrisons of Chinese regular troops from Son Tay, Bac Ninh and Lang Son, despite the likelihood that they would be shortly engaged in battle against the $COUNTRY_ADJ$.;;;;;;;;;;;;;x
 EVTNAME999952;The Sino-$COUNTRY_ADJ$ War;;;;;;;;;;;;;x
 EVTOPTA999952;We’ll crush the Black Flags either way.;;;;;;;;;;;;;x
+EVTNAME999590;German Threat;;;;;;;;;;;;;x
+EVTDESC999590;Despite we had not initially thought of unified Germany as that much of a threat to our country, now that they have risen as high us as, alarm bells are ringing in Parliament and in various government and interest group backrooms, pointing out how threatening Germany now is and that we must undertake measures to preserve the balance of power in the world, and retain the hegemony we have on world affairs.;;;;;;;;;;;;;x
+EVTOPTA999590;It is time to look for allies on the Continent;;;;;;;;;;;;;x
+EVTOPTA999590;Nonsense, Germany is a friend;;;;;;;;;;;;;x
+EVTOPTA999591;We can not be allies with @GER;;;;;;;;;;;;;x
+EVTOPTA999592;We can not be allies with @RUS;;;;;;;;;;;;;x
+EVTNAME999592;Russian Threat;;;;;;;;;;;;;x
+EVTDESC999592;Since Russian invasion and victory in Ottoman Empire, our interests in India, Middle East and Mediterranean are under threat. We can not allow ourselves to ally with Russian Bear and we must do everything we can to oppose it.;;;;;;;;;;;;;x
 EVTDESC999960;The Chinese people have suffered greatly in the 19th Century, opium addiction, foreign imperialism, horrific rebellions and bloodshed have left China weak, humiliated and backwards. However, efforts to modernize China have made significant progress, and we are now considered a developed country.;;;;;;;;;;;;;x
 EVTNAME999960;The Century of Humiliation;;;;;;;;;;;;;x
 EVTOPTA999960;We shall be humiliated no longer!;;;;;;;;;;;;;x
