--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1437,3 +1437,12 @@ population_80mil;Population: 80 Million, Coffers: 10,000,000;;;;;;;;;;;;;x
 population_360mil;Population: 360 Million, Coffers: 15,000,000;;;;;;;;;;;;;x
 goloty_i_glodomerji;Goloty i Glodomerji;;;;;;;;;;;;;x
 goloty_i_glodomerji_desc;Dubbed locally as Kingdom of Bareness and Starvation, this region is one of the poorest and most backward in Europe;;;;;;;;;;;;;x
+russian_menace;Russian Bear Menace;;;;;;;;;;;;;x
+russian_menace_desc;Russian domination in Eastern Europe and Middle East threatens us;;;;;;;;;;;;;x
+outraged_europe_rus;European Powers are Alarmed;;;;;;;;;;;;;x
+outraged_europe_rus_desc;Europe is alarmed at our gains;;;;;;;;;;;;;x
+lucrative_russia_trade;Lucrative trade with Russia;;;;;;;;;;;;;x
+lucrative_russia_trade_desc;As we are the only major European neighbour at peace with Russia, our trade is prospering;;;;;;;;;;;;;x
+german_threat;Germany is a Threat;;;;;;;;;;;;;x
+triple_entente;Member of Triple Entente;;;;;;;;;;;;;x
+central_powers;Member of Central Powers;;;;;;;;;;;;;x
