--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -829,7 +829,7 @@ SAT_absolute_monarchy_ADJ;Shimazu;;;;;;;;;;;;;x
 SAT_hms_government_ADJ;Shimazu;;;;;;;;;;;;;x
 SAT_prussian_constitutionalism_ADJ;Shimazu;;;;;;;;;;;;;x
 SAX_ADJ;Saxon;Saxon;Sächsisch;;;;;;;;;;;x
-SBA_ADJ;Porteno;;;;;;;;;;;;;x
+SBA_ADJ;Bonaerese;;;;;;;;;;;;;x
 SBS_ADJ;Sambas;;;;;;;;;;;;;x
 SCA_ADJ;Scandinavian;Scandinave;Skandinavisch;;;;;;;;;;;x
 SCH_ADJ;Schleswigian;Slesvigois;Schleswigisch;;;;;;;;;;;x
