--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -60,12 +60,6 @@ anti_jacobin_tract_desc;A tract arguing the causes of counter-revolution, order,
 anti_manchu_sentiment;Anti-Manchu Sentiment;;;;;;;;;;;;;x
 anti_manchu_sentiment_desc;There is a great deal of bitterness against the Qing Dynasty’s rulers in this province.;;;;;;;;;;;;;x
 apache_raiders;Apache Raiders;;;;;;;;;;;;;x
-ARC_customs_act;1835 Customs Act;;;;;;;;;;;;;x
-ARC_customs_act_desc;A law restricting imported goods has been introduced and approved by the leading government.;;;;;;;;;;;;;x
-ARC_leader;Leader of the Argentine Confederation;;;;;;;;;;;;;x
-ARC_leader_desc;We are the leading member of the Argentine Confederation, and we promise to protect its members and ensure the survival of the Confederation.;;;;;;;;;;;;;x
-ARC_member;Member of the Argentine Confederation;;;;;;;;;;;;;x
-ARC_member_desc;We are part of the Argentine Confederation, and while it makes us less influential diplomatically, its leader ensures our protection and integrity.;;;;;;;;;;;;;x
 armenian_diaspora;Armenian Diaspora;;;;;;;;;;;;;x
 armenian_diaspora_desc;This province contains a minority population that comes from the Armenian diaspora.;;;;;;;;;;;;;x
 assegai;Impi;;;;;;;;;;;;;x
@@ -83,7 +77,7 @@ backroom_boy_desc;Our leader hails from the ranks of the bureaucracy, possessing
 bad_badboy;International Isolation;;;;;;;;;;;;;x
 bad_badboy_desc;Our great nation has acquired many enemies and now most of the nations in the world see us as an international threat. They joined forces to isolate us in an attempt to bring us down.;;;;;;;;;;;;;x
 bad_debter;Bad debtor;;;;;;;;;;;;;x
-bad_debter_desc;Due to your country’s history of flaky economy banks will demand a higher interest on your loans;;;;;;;;;;;;;x
+bad_debter_desc;Due to your country’s history of flaky economy, banks will demand a higher interest on your loans;;;;;;;;;;;;;x
 bad_iron;Inefficient Mining;;;;;;;;;;;;;x
 inefficient_farming;Inefficient Farming;;;;;;;;;;;;;x
 lean_stomachs;Our people are sated easily;;;;;;;;;;;;;x
