--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -4014,3 +4014,4 @@ PROV4012;Tapenaga;;;;;;;;;;;;;x
 PROV4013;Ombú;;;;;;;;;;;;;x
 PROV4014;Mawo P’itsek;;;;;;;;;;;;;x
 PROV4015;Nacurutu;;;;;;;;;;;;;x
+PROV4015;Chañaritos;;;;;;;;;;;;;x
