--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -54,6 +54,6 @@ wine;Wine;;;;;;;;;;;;;x
 wool;Wool;;;;;;;;;;;;;x
 precious_metal_desc;Precious metals like Gold and Silver can be converted straight into money.;;;;;;;;;;;;;;x
 soap;Soap;;;;;;;;;;;;;;x
-tires;Rubberware;;;;;;;;;;;;;;x
+tires;Tires and Rubberware;;;;;;;;;;;;;;x
 pharmaceuticals;Pharmaceuticals;;;;;;;;;;;;;;x
 plastics;Plasticware;;;;;;;;;;;;;;x
