Balance changes that theo will probably revert lmao

--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1231,3 +1231,7 @@ police_state;The Police State;;;;;;;;;;;;;x
 police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
 logical_investigations;Logical Investigations;;;;;;;;;;;;;x
 logical_investigations_desc;Logical Investigations is a book written by the philosopher Edmund Husserl. The book is considered to be one of the most important works in the field of phenomenology, which is the study of consciousness and experience. In the book, Husserl develops his theory of intentionality, which is the idea that all consciousness is directed towards something or has an object.;;;;;;;;;;;;;x
+haber_process;Haber–Bosch process;;;;;;;;;;;;;x
+haber_process_desc;The Haber-Bosch process is a chemical process that converts atmospheric nitrogen and hydrogen gas into ammonia, which is a key ingredient in fertilizer and other industrial applications;;;;;;;;;;;;;x
+moving_assembly_line;Moving Assembly Line;;;;;;;;;;;;;x
+moving_assembly_line_desc;Moving Assembly Line;;;;;;;;;;;;;x
