--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -367,8 +367,8 @@ advanced_steel_alloys;Complex Steel Alloys;;;;;;;;;;;;;x
 advanced_steel_alloys_desc;Research is managing the uncovering of a plethora of several new steel alloys, which had superior strength, durability, and resistance to corrosion compared to traditional steels, such as Stainless Steel, High-Speed Steel, Tool Steel and many others.;;;;;;;;;;;;;x
 high_ways_free_ways;Advanced Interchange Design;;;;;;;;;;;;;x
 high_ways_free_ways_desc;Advanced Interchange Design;;;;;;;;;;;;;x
-advanced_polymers;Large Scale Polymer Production;;;;;;;;;;;;;x
-advanced_polymers_desc;Large Scale Polymer Production;;;;;;;;;;;;;x
+advanced_polymers;Large Scale Chemical Production;;;;;;;;;;;;;x
+advanced_polymers_desc;Large Scale Chemical Production;;;;;;;;;;;;;x
 modernism;Modernism;;;;;;;;;;;;;x
 modernism_desc;Modernism;;;;;;;;;;;;;x
 ontology;Formal Ontology;;;;;;;;;;;;;x
