--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3346,3 +3346,11 @@ accept_triumpth_axul_desc;With Axum fully under Roman Rule our trade routes to I
 accept_triumpth_axul_title;Triumpth for Axum.;;;;;;;;;;;;;x
 the_universal_empire_desc;Our Empire Sprawls across four continets we own most of the Major European Cities our Empire has reached its Greatest Extend and as such we have reclaimed the title of the Universal Empire.AVE!;;;;;;;;;;;;;x
 the_universal_empire_title;The Universal Empire.;;;;;;;;;;;;;x
+institute_national_library_desc;Instituiting a national library will allow us to centralize our knowledge stores in an easily accesible location.;;;;;;;;;;;;;x
+institute_national_library_title;Establish a national library.;;;;;;;;;;;;;x
+institute_national_observatory_desc;Instituiting a national observatory will better allow our brightest minds to understand the cosmos.Both a prestigious and progressive undertaking.;;;;;;;;;;;;;x
+institute_national_observatory_title;Establish a national Observatory;;;;;;;;;;;;;x
+institute_stamps_desc;Stamps are a fundemental requirement for the proper allocation of letters and goods. With the establishment of a national stamp system we can officially enter the industrial era.;;;;;;;;;;;;;x
+institute_stamps_title;Institute Stamps;;;;;;;;;;;;;x
+adopt_a_national_anthem_desc; An anthem is one of the core aspects of a state's national identity, it is generally seen as an apolitical unifying element it is time for us to choose a national anthem.;;;;;;;;;;;;;x
+adopt_a_national_anthem_title;Adopt a National Anthem.;;;;;;;;;;;;;x
