--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1404,6 +1404,14 @@ neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
 religious_resurgence;Religious Resurgence;;;;;;;;;;;;;x
 religious_resurgence_desc;We have achieved our religious goals and our faith is resurging as a result.;;;;;;;;;;;;;x
 destiny_fullfiled;Destiny Fullfiled;;;;;;;;;;;;;x
-destiny_fullfiled;We have achieved our destiny reaching heights a few years ago only imaginable in the wildest dreams of hopeless romantics.;;;;;;;;;;;;;x
+destiny_fullfiled_desc;We have achieved our destiny reaching heights a few years ago only imaginable in the wildest dreams of hopeless romantics.;;;;;;;;;;;;;x
 universal_imperium;Universal Empire;;;;;;;;;;;;;x
-universal_imperium;Our Empire has Unified its two ancestral mandates and has claimed dominion over mankind. The lands that are not yet under our rule soon will be.;;;;;;;;;;;;;x
+universal_imperium_desc;Our Empire has Unified its two ancestral mandates and has claimed dominion over mankind. The lands that are not yet under our rule soon will be.;;;;;;;;;;;;;x
+nat_library_established;We have established a national library;;;;;;;;;;;;;x
+nat_library_established_desc;A national library is the centre of scholarship for a state, while universities produce knowledge library act as a repository.;;;;;;;;;;;;;x
+nat_observ_established;We have established a national observatory;;;;;;;;;;;;;x
+nat_observ_established_desc;The Fascination with the stars is a natural aspect of the Human experience constructing an observatory will both increase our prestige and allow our brightest minds to better understand the cosmos.;;;;;;;;;;;;;x
+adopted_stamps;We have adopted a system of Stamps;;;;;;;;;;;;x
+adopted_stamps_desc;Stamps are a fundemental requirement for the proper allocation of letters and goods. With the establishment of a national stamp system we are officially entering the industrial era.;;;;;;;;;;;;;x
+adopted_anthem;We have adopted an Anthem ;;;;;;;;;;;;;x
+adopted_anthem_desc;An anthem is one of the core aspects of a state's national identity, it is generally seen as an apolitical unifying element.;;;;;;;;;;;;;x
