--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3322,7 +3322,7 @@ accept_triumpth_elba_desc;Now that the Elba is acting as our border we can rest 
 accept_triumpth_elba_title;Triumpth for Elba.;;;;;;;;;;;;;x
 accept_triumpth_persia_infr_desc;The Persian wars under different dynasties were a thorn to the empire's side but with its current weakness and our strength it is time to end our rival. This is bad the first succesfull blow!;;;;;;;;;;;;;x
 accept_triumpth_persia_infr_title;Triumpth for Persia Inferior.;;;;;;;;;;;;;x
-accept_triumpth_persia_super__desc;This is indeed a glorious day, our long foe is all but destroyed but since we have reached so far east, maybe we should reach for the Indo-Bactria, after all Alexander's legacy is part of our patrimony.;;;;;;;;;;;;;x
+accept_triumpth_persia_super_desc;This is indeed a glorious day, our long foe is all but destroyed but since we have reached so far east, maybe we should reach for the Indo-Bactria, after all Alexander's legacy is part of our patrimony.;;;;;;;;;;;;;x
 accept_triumpth_persia_super_title;Triumpth for Persia Superior.;;;;;;;;;;;;;x
 reclaiming_alexanders_legacy_desc;We have indeed reclaimed the lands Alexander once conquered with this we have united our roman with our Hellenic Heritage.;;;;;;;;;;;;;x
 reclaiming_alexanders_legacy_title;Reclaiming Alexander's Legaacy.;;;;;;;;;;;;;x
@@ -3346,6 +3346,8 @@ accept_triumpth_axul_desc;With Axum fully under Roman Rule our trade routes to I
 accept_triumpth_axul_title;Triumpth for Axum.;;;;;;;;;;;;;x
 the_universal_empire_desc;Our Empire Sprawls across four continets we own most of the Major European Cities our Empire has reached its Greatest Extend and as such we have reclaimed the title of the Universal Empire.AVE!;;;;;;;;;;;;;x
 the_universal_empire_title;The Universal Empire.;;;;;;;;;;;;;x
+roman_renovations_desc;As our empire restablishes itself we are presented with the opportunity to reestablish or to modernize several of our erstwhile major cities!;;;;;;;;;;;;;x
+roman_renovations_title;Roman Renovations.;;;;;;;;;;;;;x
 institute_national_library_desc;Instituiting a national library will allow us to centralize our knowledge stores in an easily accesible location.;;;;;;;;;;;;;x
 institute_national_library_title;Establish a national library.;;;;;;;;;;;;;x
 institute_national_observatory_desc;Instituiting a national observatory will better allow our brightest minds to understand the cosmos.Both a prestigious and progressive undertaking.;;;;;;;;;;;;;x
@@ -3354,3 +3356,4 @@ institute_stamps_desc;Stamps are a fundemental requirement for the proper alloca
 institute_stamps_title;Institute Stamps;;;;;;;;;;;;;x
 adopt_a_national_anthem_desc; An anthem is one of the core aspects of a state's national identity, it is generally seen as an apolitical unifying element it is time for us to choose a national anthem.;;;;;;;;;;;;;x
 adopt_a_national_anthem_title;Adopt a National Anthem.;;;;;;;;;;;;;x
+
