--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1403,7 +1403,9 @@ religious_insurrection_desc;Locals are rebelling on blind fate!;;;;;;;;;;;;;x
 neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
 religious_resurgence;Religious Resurgence;;;;;;;;;;;;;x
 religious_resurgence_desc;We have achieved our religious goals and our faith is resurging as a result.;;;;;;;;;;;;;x
-destiny_fullfiled;Destiny Fullfiled;;;;;;;;;;;;;x
+cultural_revival;Cultural Revival.;;;;;;;;;;;;;x
+cultural_revival_desc;We have acheived our core cultural objectives and as a result our culture heritage is being revived.;;;;;;;;;;;;;x
+destiny_fullfiled;Destiny Fullfiled.;;;;;;;;;;;;;x
 destiny_fullfiled_desc;We have achieved our destiny reaching heights a few years ago only imaginable in the wildest dreams of hopeless romantics.;;;;;;;;;;;;;x
 universal_imperium;Universal Empire;;;;;;;;;;;;;x
 universal_imperium_desc;Our Empire has Unified its two ancestral mandates and has claimed dominion over mankind. The lands that are not yet under our rule soon will be.;;;;;;;;;;;;;x
