--- a/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
+++ b/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
@@ -18,7 +18,7 @@ override_direct_immigration_move_pops_to_colonies_title;Direct Immigration: Move
 override_immigrant_options_desc;Select the options that you want for immigration!;;;;;;;;;;;;;x
 override_immigrant_options_title;Immigration Options;;;;;;;;;;;;;x
 override_start_direct_assimilation;Start an Assimilation Campaign;;;;;;;;;;;;;x
-override_start_direct_assimilation_desc;This will allow you to target a specific state and attempt to assimilate cultures there, regardless of cores, for a period of 5 years;;;;;;;;;;;;;x
+override_start_direct_assimilation_desc;This will allow you to target a specific state and attempt to assimilate cultures there, regardless of cores, for a period of 5 years. If you do not have culture cores of other nations, there will be no effect to this campaign.;;;;;;;;;;;;;x
 direct_immigration_program;Recent Direct Migration Campaign;;;;;;;;;;;;;x
 direct_immigration_program_desc;We've recently had a migration campaign;;;;;;;;;;;;;x
 lingering_effects_DI;Lingering Effects of Colonization;;;;;;;;;;;;;x
