--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1404,6 +1404,7 @@ rgo_boycott_modifier_desc;They are refusing to work!;;;;;;;;;;;;;x
 religious_insurrection;Religious Insurrection;;;;;;;;;;;;;x
 religious_insurrection_desc;Locals are rebelling on blind fate!;;;;;;;;;;;;;x
 neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
+neutrality_timer_desc;Our country deliberately takes no sides.;;;;;;;;;;;;;x
 bank_timer;Bank cooldown.;;;;;;;;;;;;;x
 univerisity_timer;University cooldown.;;;;;;;;;;;;;x
 bank_timer_desc;A new Bank has been built.;;;;;;;;;;;;;x
