oregon bugfix, rus dec flag optimization

--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -45,6 +45,11 @@ through_january_uprising;Through the Congress Poland Uprising;;;;;;;;;x
 january_uprising_succeeded;Congress Poland Uprising Succeeded;;;;;;;;;x
 crimean_war;Crimean War Happened;;;;;;;;;x
 treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
-treaty_of_paris_russia;Treaty of Ayvansaray - Russia won the Crimean War;;;;;;;;;x
+treaty_of_paris_russia;Treaty of Paris - Russia won the Crimean War;;;;;;;;;x
 the_manifesto;The Manifesto on Unshakable Autocracy;;;;;;;;;x
 tsaralexander2;Tsar Alexander II Reigns;;;;;;;;;x
+russian_america_ambition;Russian Pacific Ambition Active;;;;;;;;;x
+rossiskiy_kalyforniya;Signed Treaty of San Francisco;;;;;;;;;x
+snatch_oregon_rus;Seized Oregon coast by decision;;;;;;;;;x
+initiated_mordvinov_plan;Settled Serfs in California - Mordvinov Plan;;;;;;;;;x
+war_for_california;Went to war over California;;;;;;;;;x
