--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -375,7 +375,7 @@ ontology;Formal Ontology;;;;;;;;;;;;;x
 ontology_desc;Formal Ontology;;;;;;;;;;;;;x
 social_psychology;Social Psychology;;;;;;;;;;;;;x
 social_psychology_desc;Social Psychology;;;;;;;;;;;;;x
-the_police_state;Polizeistaat;;;;;;;;;;;;;x
+the_police_state;Surveillance and Counterintelligence;;;;;;;;;;;;;x
 the_police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
 psychodynamics;Psychodynamics;;;;;;;;;;;;;x
 psychodynamics_desc;Psychodynamics;;;;;;;;;;;;;x
