override option for faster infamy removal

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1447,3 +1447,4 @@ lucrative_russia_trade_desc;As we are the only major European neighbour at peace
 german_threat;Germany is a Threat;;;;;;;;;;;;;x
 triple_entente;Member of Triple Entente;;;;;;;;;;;;;x
 central_powers;Member of Central Powers;;;;;;;;;;;;;x
+infamy_removal;Active Diplomatic Campaign;;;;;;;;;;;;;x
