--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -13,6 +13,9 @@ german_confederation_member;Member of the German Confederation;;;;;;;;;;;;;x
 germany_has_renamed_elsass;German Elsass;;;;;;;;;;;;;x
 in_great_war;Fighting in a Great War;;;;;;;;;;;;;x
 IOCMember;Member of the International Olympic Committee;;;;;;;;;;;;;x
+is_australia;Australia;;;;;;;;;;;;;x
+is_canada;Canada;;;;;;;;;;;;;x
+is_new_zealand;New Zealand;;;;;;;;;;;;;x
 is_swiss;Is Switzerland;;;;;;;;;;;;;x
 islamic_law;Islamic Law;;;;;;;;;;;;;x
 lacking_writing_system;Lacks Writing System;;;;;;;;;;;;;x
