--- a/TGC/localisation/00_flags-election-government.csv
+++ b/TGC/localisation/00_flags-election-government.csv
@@ -2,6 +2,7 @@ CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;
 absolute_monarchy_gov;Absolute monarchy;;;;;;;;;;;;;x
 anarcho_liberal_gov;Radical government;;;;;;;;;;;;;x
 anarcho_liberal_election_win;Radicals won election;;;;;;;;;;;;;x
+authoritarian_government;Authoritarian Government;;;;;;;;;;;;;x
 colonial_company_gov;Colonial government;;;;;;;;;;;;;x
 communist_gov;Communist government;;;;;;;;;;;;;x
 communist_election_win;Communists won election;;;;;;;;;;;;;x
