--- a/TGC/localisation/00_map-regions-meta.csv
+++ b/TGC/localisation/00_map-regions-meta.csv
@@ -1,5 +1,6 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 ALTA_CALIFORNIA;Alta California Territory;;;;;;;;;;;;;x
+ASIAN_PLANTANTIONS;Asian Plantantions and Mines;;;;;;;;;;;;;x
 BALTIC_SEA_COAST;Baltic Sea Coast;;;;;;;;;;;;;x
 BIG_TEXAS;Texas Territory;;;;;;;;;;;;;x
 BLACK_SEA_COAST;Black Sea Coast;;;;;;;;;;;;;x
