More Colonial Settlement

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -67,6 +67,10 @@ override_infamy_for_growth_modifier_removal_desc;Cancel the current ongoing grow
 override_infamy_for_growth_modifier_removal_title;Stop the Ongoing Population Campaign;;;;;;;;;;;;;x
 override_infamy_for_growth_selector_desc;Start a campaign to trade infamy & tax-efficiency reduction in-exchange for more overall pop-growth.;;;;;;;;;;;;;x
 override_infamy_for_growth_selector_title;Commence a Population Growth Campaign;;;;;;;;;;;;;x
+override_more_colonial_settlement_desc;This will increase your pops going to colonies;;;;;;;;;;;;;x
+override_more_colonial_settlement_title;Start a Colonial Settlement Campaign;;;;;;;;;;;;;x
+override_override_more_colonial_settlement_remove_desc;This will stop the settlement campaign;;;;;;;;;;;;;x
+override_override_more_colonial_settlement_remove_title;Stop Colonial Settlement Campaign;;;;;;;;;;;;;x
 override_faster_infamy_removal_title;Commence a Diplomatic Offensive;;;;;;;;;;;;;x
 override_faster_infamy_removal_desc;Instruct our Foreign Minister to commence a campaign to improve our standing in the world;;;;;;;;;;;;;x
 override_faster_infamy_removal_remove_title;Stop Diplomatic Efforts;;;;;;;;;;;;;x
