--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1448,3 +1448,4 @@ german_threat;Germany is a Threat;;;;;;;;;;;;;x
 triple_entente;Member of Triple Entente;;;;;;;;;;;;;x
 central_powers;Member of Central Powers;;;;;;;;;;;;;x
 infamy_removal;Active Diplomatic Campaign;;;;;;;;;;;;;x
+more_colonial_settlement;Active Colonial Campaign;;;;;;;;;;;;;x
