Anti-Emigration Campaign

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -71,6 +71,9 @@ override_more_colonial_settlement_desc;This will increase your pops going to col
 override_more_colonial_settlement_title;Start a Colonial Settlement Campaign;;;;;;;;;;;;;x
 override_override_more_colonial_settlement_remove_desc;This will stop the settlement campaign;;;;;;;;;;;;;x
 override_override_more_colonial_settlement_remove_title;Stop Colonial Settlement Campaign;;;;;;;;;;;;;x
+override_less_emigration_desc;Start a campaign to actively promote to our citizens better living conditions and pay at home, rather than emigrating overseas;;;;;;;;;;;;;x
+override_less_emigration_title;Start an Anti-Emigration Campaign;;;;;;;;;;;;;x
+override_less_emigration_remove_title;Stop the Anti-Emigrationg Campaign;;;;;;;;;;;;;x
 override_faster_infamy_removal_title;Commence a Diplomatic Offensive;;;;;;;;;;;;;x
 override_faster_infamy_removal_desc;Instruct our Foreign Minister to commence a campaign to improve our standing in the world;;;;;;;;;;;;;x
 override_faster_infamy_removal_remove_title;Stop Diplomatic Efforts;;;;;;;;;;;;;x
