--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1449,3 +1449,5 @@ triple_entente;Member of Triple Entente;;;;;;;;;;;;;x
 central_powers;Member of Central Powers;;;;;;;;;;;;;x
 infamy_removal;Active Diplomatic Campaign;;;;;;;;;;;;;x
 more_colonial_settlement;Active Colonial Campaign;;;;;;;;;;;;;x
+less_emigration;Active Anti-Emigration Campaign;;;;;;;;;;;;;x
+less_emigration_desc;We are actively trying to keep our citizens in our country with better pay and jobs;;;;;;;;;;;;;x
