--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -391,3 +391,5 @@ armored_vehicles;Armored Vehicles;;;;;;;;;;;;;x
 armored_vehicles_desc;Armored Vehicles;;;;;;;;;;;;;x
 semi_auto_rifles;Semi Automatic Rifles;;;;;;;;;;;;;x
 semi_auto_rifles_desc;Semi Automatic Rifles;;;;;;;;;;;;;x
+early_aeronautics;Early Aeronautics;;;;;;;;;;;;;x
+early_aeronautics_desc;Early Aeronautics;;;;;;;;;;;;;x
