--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -393,3 +393,5 @@ semi_auto_rifles;Semi Automatic Rifles;;;;;;;;;;;;;x
 semi_auto_rifles_desc;Semi Automatic Rifles;;;;;;;;;;;;;x
 early_aeronautics;Early Aeronautics;;;;;;;;;;;;;x
 early_aeronautics_desc;Early Aeronautics;;;;;;;;;;;;;x
+militar_culture;Militar Culture and Tradition;;;;;;;;;;;;;x
+militar_culture_desc;Militar Culture and Tradition;;;;;;;;;;;;;x
