--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -303,6 +303,7 @@ CPL_dominion;Congress Poland;;;;;;;;;;;;;x
 CPL_hms_government;Poland;;;;;;;;;;;;;x
 CPL_prussian_constitutionalism;Poland;;;;;;;;;;;;;x
 CPL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
+POL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
 CRB_absolute_monarchy;Caribbean Federation;;;;;;;;;;;;;x
 CRB_colonial_company;Leeward Islands Colony;;;;;;;;;;;;;x
 CRB_democracy;Caribbean Federation;;;;;;;;;;;;;x
