france fix, lol

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1180,10 +1180,13 @@ RSR_parliamentary_republic;People’s State of Greiz;;;;;;;;;;;;;x
 RSR_proletarian_dictatorship;People’s Commune of Greiz;;;;;;;;;;;;;x
 RSR_prussian_constitutionalism;Principality of Reuss Elder Line;;;;;;;;;;;;;x
 RUS_absolute_monarchy;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;;;;x
+RUS_absolute_monarchy2;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;;;;x
 RUS_democracy;Russian Federative Republic;;;;;;;;;;;;;x
 RUS_hms_government;Russian Empire;;;;;;;;;;;;;x
+RUS_hms_government2;Russian Empire;;;;;;;;;;;;;x
 RUS_proletarian_dictatorship;Union of Soviet Socialist Republics;;;;;;;;;;;;;x
 RUS_prussian_constitutionalism;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;;;;x
+RUS_prussian_constitutionalism2;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;;;;x
 RUT_democracy;West Ukraine;;;;;;;;;;;;;x
 RUT_presidential_dictatorship;West Ukraine;;;;;;;;;;;;;x
 RUT_proletarian_dictatorship;West Ukrainian People’s Republic;;;;;;;;;;;;;x
