Army tech, navy tech, loc and images

--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1237,3 +1237,7 @@ moving_assembly_line;Moving Assembly Line;;;;;;;;;;;;;x
 moving_assembly_line_desc;Moving Assembly Line;;;;;;;;;;;;;x
 semi_auto_rifle_armament;Semi Automatic Rifle Armament;;;;;;;;;;;;;x
 semi_auto_rifle_armament_desc;A rifle is considered semi-automatic if it uses the energy of a fired cartridge to automatically load the next cartridge into the chamber, without requiring the shooter to manually operate the bolt or other mechanism to load the next round;;;;;;;;;;;;;x
+sonar;Sonar;;;;;;;;;;;;;x
+sonar_desc; ;;;;;;;;;;;;;x
+early_radar;Early Radar;;;;;;;;;;;;;x
+early_radar; ;;;;;;;;;;;;;x
