--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1238,6 +1238,6 @@ moving_assembly_line_desc;Moving Assembly Line;;;;;;;;;;;;;x
 semi_auto_rifle_armament;Semi Automatic Rifle Armament;;;;;;;;;;;;;x
 semi_auto_rifle_armament_desc;A rifle is considered semi-automatic if it uses the energy of a fired cartridge to automatically load the next cartridge into the chamber, without requiring the shooter to manually operate the bolt or other mechanism to load the next round;;;;;;;;;;;;;x
 sonar;Sonar;;;;;;;;;;;;;x
-sonar_desc; ;;;;;;;;;;;;;x
+sonar_desc;Sonars uses sound waves to detect underwater objects, such as submarines or mines. A sonar system sends out sound waves that bounce off of objects in the water and then detects the returning echoes to determine the location and characteristics of the object. Sonar is an important tool for anti-submarine warfare, as it allows ships and aircraft to locate and track submerged submarines.;;;;;;;;;;;;;x
 early_radar;Early Radar;;;;;;;;;;;;;x
-early_radar; ;;;;;;;;;;;;;x
+early_radar;Radars uses radio waves to detect objects in the air or on the surface of the water. A radar system sends out radio waves that bounce off of objects and then detects the returning echoes to determine the location, speed, and direction of the object. Radar is used for a wide range of naval operations, including detecting enemy ships and aircraft, guiding weapons systems, and tracking the movement of friendly forces.;;;;;;;;;;;;;x
