--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -397,5 +397,5 @@ militar_culture;Militar Culture and Tradition;;;;;;;;;;;;;x
 militar_culture_desc;Militar Culture and Tradition;;;;;;;;;;;;;x
 early_oil;Early Oil Ships;;;;;;;;;;;;;x
 early_oil_desc;Early Oil Ships;;;;;;;;;;;;;x
-network_centric_warfare;Early Oil Ships;;;;;;;;;;;;;x
-network_centric_warfare_desc;Early Oil Ships;;;;;;;;;;;;;x
+network_centric_warfare;Network-Centric Warfare;;;;;;;;;;;;;x
+network_centric_warfare_desc;Network-Centric Warfare;;;;;;;;;;;;;x
