army tech fully finished

--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1241,3 +1241,9 @@ sonar;Sonar;;;;;;;;;;;;;x
 sonar_desc;Sonars uses sound waves to detect underwater objects, such as submarines or mines. A sonar system sends out sound waves that bounce off of objects in the water and then detects the returning echoes to determine the location and characteristics of the object. Sonar is an important tool for anti-submarine warfare, as it allows ships and aircraft to locate and track submerged submarines.;;;;;;;;;;;;;x
 early_radar;Early Radar;;;;;;;;;;;;;x
 early_radar;Radars uses radio waves to detect objects in the air or on the surface of the water. A radar system sends out radio waves that bounce off of objects and then detects the returning echoes to determine the location, speed, and direction of the object. Radar is used for a wide range of naval operations, including detecting enemy ships and aircraft, guiding weapons systems, and tracking the movement of friendly forces.;;;;;;;;;;;;;x
+literacy_programs;Literacy Programs;;;;;;;;;;;;;x
+literacy_programs_desc;Literacy programs were developed to ensure that soldiers were able to read and write, which was seen as essential for effective communication and military intelligence.;;;;;;;;;;;;;x
+manual_of_arms;Manual of Arms;;;;;;;;;;;;;x
+manual_of_arms_desc;The Manual of Arms is an essential part of military training, and soldiers have to learn a specific set of movements to handle their weapons safely and effectively.;;;;;;;;;;;;;x
+reveille;Standardized Reveille;;;;;;;;;;;;;x
+reveille_desc;The Reveille, which is played at the start of the day to wake up soldiers, is now standardized. Soldiers are expected to wake up promptly and start their day when the bugle call sounded.;;;;;;;;;;;;;x
