commerce tech fully finished

--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1249,3 +1249,7 @@ reveille;Standardized Reveille;;;;;;;;;;;;;x
 reveille_desc;The Reveille, which is played at the start of the day to wake up soldiers, is now standardized. Soldiers are expected to wake up promptly and start their day when the bugle call sounded.;;;;;;;;;;;;;x
 walkable_cities;Walkable Cities;;;;;;;;;;;;;x
 walkable_cities_desc;A walkable city is a city that is designed to be easily navigable on foot. This means that the streets are laid out in a grid pattern, with sidewalks and crosswalks that make it easy for pedestrians to get around. Buildings are constructed close to the street, creating a continuous street wall that provides shade and shelter for pedestrians.;;;;;;;;;;;;;x
+securization;Securization;;;;;;;;;;;;;x
+securization_desc;Hedge funds may invest in securitized products, which are financial instruments created by pooling together various assets such as mortgages, credit card debt, or other loans. The development of securitization has led to increased liquidity in the banking system and allowed banks to free up capital.;;;;;;;;;;;;;x
+reduced_intervention;Reduced Interventionism;;;;;;;;;;;;;x
+reduced_intervention_desc;Market-determined exchange rates can reduce the need for government intervention in currency markets, as there is less pressure to maintain fixed exchange rate regimes. This can help to reduce the costs associated with currency interventions and increase transparency in financial markets.;;;;;;;;;;;;;x
