--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -399,3 +399,5 @@ early_oil;Early Oil Ships;;;;;;;;;;;;;x
 early_oil_desc;Early Oil Ships;;;;;;;;;;;;;x
 network_centric_warfare;Network-Centric Warfare;;;;;;;;;;;;;x
 network_centric_warfare_desc;Network-Centric Warfare;;;;;;;;;;;;;x
+naval_welding;Naval Welding;;;;;;;;;;;;;x
+naval_welding_desc;Naval Welding;;;;;;;;;;;;;x
