france fixes, rgo, nappy 3 govt and social reform

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -740,6 +740,8 @@ loss_of_support_desc;The ruling party has lost support in this area.;;;;;;;;;;;;
 lost_war;Lost War;;;;;;;;;;;;;x
 louis_napoleon_iii;Louis-Napoléon Bonaparte;;;;;;;;;;;;;x
 louis_napoleon_iii_desc;Nephew and heir of Napoleon I, he is a man of the people and carries with him a legacy that makes him seemingly invincible—even if, at times, his decisions are reckless and of questionable military value.;;;;;;;;;;;;;x
+louis_napoleon_iv;Louis-Napoléon IV Bonaparte;;;;;;;;;;;;;x
+louis_napoleon_iv_desc;Son and heir of Napoleon III, and as any Bonaparte, extremely popular among the French, an astute young man with a military career, aspires to follow his predecessors as a man of the people and army;;;;;;;;;;;;;x
 low_health_care_poorly_funded_desc;Less government investment in administration results in a poorly funded healthcare system.;;;;;;;;;;;;;x
 lower_taxes;Lowered Taxes;;;;;;;;;;;;;x
 lower_taxes_desc;In order to reduce the resistance level in our Lowland areas, we have decided to lower taxes. Though, we had to do the same in all areas of Germany, as to not favour them over the rest of Germany.;;;;;;;;;;;;;x
