Revert "Revert "Merge branch 'economy-experimental' of https://github.com/rderekp/The-Grand-Combo into economy-experimental""
This reverts commit b09c1185483b0f46e0c835259fdc0d6eeb20f022.

--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -387,3 +387,11 @@ inflation_targeting;Inflation targeting;;;;;;;;;;;;;x
 inflation_targeting_desc;Inflation targeting;;;;;;;;;;;;;x
 marginalism;The Marginalism Revolution;;;;;;;;;;;;;x
 marginalism_desc;Marginalism;;;;;;;;;;;;;x
+armored_vehicles;Armored Vehicles;;;;;;;;;;;;;x
+armored_vehicles_desc;Armored Vehicles;;;;;;;;;;;;;x
+semi_auto_rifles;Semi Automatic Rifles;;;;;;;;;;;;;x
+semi_auto_rifles_desc;Semi Automatic Rifles;;;;;;;;;;;;;x
+early_aeronautics;Early Aeronautics;;;;;;;;;;;;;x
+early_aeronautics_desc;Early Aeronautics;;;;;;;;;;;;;x
+militar_culture;Militar Culture and Tradition;;;;;;;;;;;;;x
+militar_culture_desc;Militar Culture and Tradition;;;;;;;;;;;;;x
